<resources>
    <string name="app_name">Caclulator</string>
    <string name="multiply">*</string>
    <string name="result">=</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="division">/</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="seven">7</string>
    <string name="difference">-</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="sum">+</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="type">Type</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="signChanger">±</string>
    <string name="removeCurrentNumber">CE</string>
    <string name="radical">√</string>
    <string name="square">ꭕ²</string>
    <string name="reverse">1/x</string>
    <string name="mod">Mod</string>
    <string name="exp">Exp</string>
    <string name="log">log</string>
    <string name="tenInPowerOfCurrentNumber">10^x</string>
    <string name="power">x^y</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="second">2nd</string>
    <string name="openingBracket">(</string>
    <string name="pi">pi</string>
    <string name="factorial">n!</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>

</resources>
